--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-multipart==0.0.6
 pillow==10.1.0
 numpy==1.24.3
 scikit-image==0.21.0
-torch==2.1.0
-torchvision==0.16.0
+# CPU-only versions (mucho más ligeras)
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
 opencv-python==4.8.1.78 
