--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ python-multipart==0.0.6
 pillow==10.1.0
 numpy==1.24.3
 scikit-image==0.21.0
-# Standard versions compatible with Python 3.9
-torch==2.0.1
-torchvision==0.15.2
+# Updated PyTorch versions for better compatibility
+torch==2.1.2
+torchvision==0.16.2
 opencv-python==4.8.1.78
-matplotlib==3.7.2 
+matplotlib==3.7.2
+psutil==5.9.8 
