--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
 python-multipart==0.0.6
-pillow==10.1.0
-numpy==1.24.3
-scikit-image==0.21.0
-# Updated PyTorch versions for better compatibility
-torch==2.1.2
-torchvision==0.16.2
-opencv-python==4.8.1.78
-matplotlib==3.7.2
-psutil==5.9.8 
+pillow==11.1.0
+numpy==2.2.1
+scikit-image==0.25.2
+# Updated PyTorch versions to match local environment (critical for model loading)
+torch==2.5.1
+torchvision==0.20.1
+opencv-python==4.10.0.84
+matplotlib==3.10.0
+psutil==6.1.1 
