Fix frontend deployment: allow JSON files in frontend directory
- Add exception to .gitignore for frontend/*.json files
- Include package.json, package-lock.json, tsconfig.json, components.json
- Fixes Vercel deployment error where Next.js wasn't detected
- Resolves 'No Next.js version detected' build error

--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,9 @@ dmypy.json
 
 # But keep important text files
 !requirements.txt
+# But keep frontend JSON files
+!frontend/*.json
+!frontend/**/*.json
 
 # IDE specific
 .vscode/
