fix: allow frontend lib directory in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,9 @@ dmypy.json
 # But keep frontend JSON files
 !frontend/*.json
 !frontend/**/*.json
+# But keep frontend lib directory
+!frontend/src/lib/
+!frontend/src/lib/**
 
 # IDE specific
 .vscode/
